@@ -57,6 +57,9 @@ Number of future \fIDAYS\fR to show (default: 2). This value is relative to the 
 .TP
 .B -s \fITEXT\fR
 Search the database for \fITEXT\fR
+.TP
+.B -C
+Don't show any colors in the output
 .SH CONFIG FILE
 .LP
 The configuration file consists of a section with settings for the program
