@@ -4,7 +4,9 @@ Get the latest version of this file at http://episoder.sourceforge.net/
 v0.5.3 (xx xxx 2009)
 ====================
  * Added support for another epguides formatting style (used eg. for "Eureka")
+ * Added option to suppress colors in console output
  * Improved compatibility with older python versions
+
 
 v0.5.2 (30 Jun 2009)
 ====================
